[project]
name = "real-time-latent-consistency-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.1",
    "compel>=2.0.3",
    "comtypes>=1.4.8",
    "diffusers>=0.31.0",
    "fastapi>=0.115.4",
    "markdown2>=2.5.1",
    "numpy<2",
    "pillow>=11.0.0",
    "setuptools>=75.3.0",
    "stable-fast>=1.0.5",
    "torch~=2.3.0",
    "transformers>=4.46.2",
    "uvicorn[standard]>=0.32.0",
    "xformers>=0.0.27",
]

[tool.uv.sources]
torch = {index="torch"}
stable_fast = { url="https://github.com/chengzeyi/stable-fast/releases/download/v1.0.5/stable_fast-1.0.5+torch230cu121-cp311-cp311-win_amd64.whl"}

[[tool.uv.index]]
name="torch"
url = "https://download.pytorch.org/whl/cu121"
explicit=true
